Simplify Vercel config - use public folder for static files

--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,11 @@
   "installCommand": "npm install",
   "env": {
     "NODE_ENV": "production"
+  },
+  "public": "dist/public",
+  "functions": {
+    "api/**": {
+      "runtime": "@vercel/node@3"
+    }
   }
 }
